added category CRUD + updated swagger
