# internal/models/event.go
@@ -12,9 +12,9 @@ type Event struct {
 	StartDate    time.Time `json:"start_date" db:"start_date" binding:"required"`
 	EndDate      time.Time `json:"end_date,omitempty" db:"end_date" binding:"required,gtfield=StartDate"`
 	Creator      User      `json:"creator"`
-	Location     string    `json:"locations" db:"location"`
+	Location     string    `json:"location" db:"location"`
 	Category     Category  `json:"category"`
-	Participants int       `json:"participants" db:"participants" json:"participants" binding:"omitempty,min=0"`
+	Participants int       `json:"participant_count" db:"participant_count" json:"participants" binding:"omitempty,min=0"`
 	ImageURLs    []string  `json:"image_urls" db:"image_urls"`
 	CreatedAt    time.Time `json:"created_at" db:"created_at"`
 }
